backend/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: back-end-service
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
  selector:
app: back-end
